--- a/package.json
+++ b/package.json
@@ -11,16 +11,12 @@
     "nova:install": "npm --prefix='../../vendor/laravel/nova' ci"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.2.22",
     "laravel-mix": "^6.0.41",
     "postcss": "^8.3.11",
-    "vue-loader": "^16.8.3"
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.14"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
-    "postcss-import": "^16.1.0",
-    "postcss-rtlcss": "^5.3.0",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss": "^3.4.4"
+    "vue": "^2.6.14"
   }
 }
